--- a/privacy_eye/popup.html
+++ b/privacy_eye/popup.html
@@ -10,9 +10,21 @@
 
 
         body {
+            color: white;
+            background-color: black;
             width: 300px;
-            display: flex;
-            justify-content: center;
+            /* display: flex;
+            justify-content: center; */ 
+        }
+
+        footer {
+            color: white;
+            background-color: black;
+        }
+
+        .breakHelper{
+            background-color:purple;
+            color:black;
         }
 
         td {
@@ -31,12 +43,11 @@
     </style>
 </head>
 <body>
-
 <table>
     <thead>
         <tr>
-            <th>hotsname</th>
-            <th>cookie duration</th>
+            <th style="color:red">hostname</th>
+            <th style="color:red">cookie duration</th>
         </tr>
     </thead>
     <tbody>
@@ -54,5 +65,16 @@
 <script src="js/jquery-3.3.1.js"></script>
 <script src="js/popup.js"></script>
 </body>
+<footer>
+    <div class="breakHelper">
+        <br>
+    </div>
+    <h3 style="color:red">tattletale</h3>
+    <p>reveal hidden trackers from all around the web</p>
+    <div class="breakHelper">
+        <br>
+    </div>
+    <p><b>tattletale</b> is free software from <a href="rav3ndust.xyz">rav3ndust.xyz</a>.</p>
+</footer>
 </html>
 
